--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.js",
   "dependencies": {
     "react": "16.3.2",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "16.3.2",
     "react-scripts": "1.1.4",
     "uikit": "3.0.0-rc.11"
